tests/specs/check/ts_in_npm_pkg/check.out
Check [WILDCARD]main.ts
TS2322 [ERROR]: Type 'string' is not assignable to type 'Test'.
const test: Test = "";
      ~~~~
    at file://[WILDCARD]/main.ts:3:7

error: Type checking failed.
